--- a/test_asa.conf
+++ b/test_asa.conf
@@ -1,4 +1,4 @@
-: Saved
+ : Saved
 
 :
 : Serial Number: 9AJDFJGV165
@@ -114,6 +114,147 @@ object-group network SCW_12345_src_AR2
  network-object 10.0.0.1 255.0.0.255
 object-group network SCW_12345_dst_AR2
  network-object host 10.1.1.1
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
+ network-object 10.101.51.0 255.255.255.0
+ network-object 10.101.55.0 255.255.255.0
+ network-object 10.101.59.0 255.255.255.0
 access-list outside-in remark ### outside-in ACL
 access-list outside-in extended permit icmp any any
 access-list outside-in extended permit object-group INTERNET_SERVICES object-group INTERNET_SERVERS object-group INTERNAL_MPE_SERVERS
