completed tests for interactive_asa

--- a/test_asa.conf
+++ b/test_asa.conf
@@ -1,4 +1,4 @@
- : Saved
+: Saved
 
 :
 : Serial Number: 9AJDFJGV165
@@ -101,7 +101,6 @@ object-group service SCW_12345_svc_AR1
  service-object tcp destination range 1000 10000
  service-object udp destination eq domain
  service-object udp destination range 1000 10000
- service-object esp
 object-group network SCW_12345_dst_AR1
  network-object host 10.1.1.1
 object-group service SCW_12345_svc_AR2
@@ -114,6 +113,7 @@ object-group network SCW_12345_src_AR2
  network-object 10.0.0.1 255.0.0.255
 object-group network SCW_12345_dst_AR2
  network-object host 10.1.1.1
+ network-object 10.101.55.0 255.255.255.0
  network-object 10.101.51.0 255.255.255.0
  network-object 10.101.55.0 255.255.255.0
  network-object 10.101.59.0 255.255.255.0
@@ -138,6 +138,9 @@ object-group network SCW_12345_dst_AR2
  network-object 10.101.51.0 255.255.255.0
  network-object 10.101.55.0 255.255.255.0
  network-object 10.101.59.0 255.255.255.0
+ service-object tcp destination range 2000 2002
+ service-object tcp destination range ssh
+ service-object 98
  network-object 10.101.51.0 255.255.255.0
  network-object 10.101.55.0 255.255.255.0
  network-object 10.101.59.0 255.255.255.0
@@ -150,111 +153,22 @@ object-group network SCW_12345_dst_AR2
  network-object 10.101.51.0 255.255.255.0
  network-object 10.101.55.0 255.255.255.0
  network-object 10.101.59.0 255.255.255.0
+ service-object tcp destination range 2000 2002
+ service-object tcp destination range ssh
+ service-object 98
  network-object 10.101.51.0 255.255.255.0
  network-object 10.101.55.0 255.255.255.0
  network-object 10.101.59.0 255.255.255.0
+ service-object tcp destination range 2000 2002
+ service-object tcp destination range ssh
+ service-object 98
  network-object 10.101.51.0 255.255.255.0
  network-object 10.101.55.0 255.255.255.0
  network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
- network-object 10.101.51.0 255.255.255.0
- network-object 10.101.55.0 255.255.255.0
- network-object 10.101.59.0 255.255.255.0
+ service-object tcp destination range 2000 2002
+ service-object tcp destination range ssh
+ service-object esp
+ service-object 98
 access-list outside-in remark ### outside-in ACL
 access-list outside-in extended permit icmp any any
 access-list outside-in extended permit object-group INTERNET_SERVICES object-group INTERNET_SERVERS object-group INTERNAL_MPE_SERVERS
