more mock features, and tests

--- a/test_asa.conf
+++ b/test_asa.conf
@@ -1,5 +1,4 @@
 : Saved
-
 :
 : Serial Number: 9AJDFJGV165
 : Hardware:   ASAv, 2048 MB RAM, CPU Pentium II 2000 MHz
@@ -139,7 +138,7 @@ access-list TEST_ACL2 extended permit object-group SCW_12345_svc_AR1 any object-
 access-list TEST_ACL2 extended permit object-group SCW_12345_svc_AR2 object-group SCW_12345_src_AR2 object-group SCW_12345_dst_AR2
 access-list TEST_ACL3 extended permit object-group SCW_12345_svc_AR1 any object-group SCW_12345_dst_AR1
 access-list TEST_ACL3 extended permit object-group SCW_12345_svc_AR2 object-group SCW_12345_src_AR2 object-group SCW_12345_dst_AR2
-access-list nate extended permit ip any anypager lines 23
+pager lines 23
 logging enable
 logging timestamp
 logging monitor debugging
@@ -300,4 +299,3 @@ call-home
   destination transport-method http
 Cryptochecksum:89fc0e7a75db639607400231a59c9051
 : end
-
