--- a/sample_asa.conf
+++ b/sample_asa.conf
@@ -6,7 +6,7 @@
 ASA Version 9.5(2)204
 !
 terminal width 511
-hostname {{ hostname }}
+hostname asav-1
 enable password 2KFQnbNIdI.2KYOU encrypted
 xlate per-session deny tcp any4 any4
 xlate per-session deny tcp any4 any6
@@ -20,35 +20,34 @@ passwd 2KFQnbNIdI.2KYOU encrypted
 names
 !
 interface GigabitEthernet0/0
- description to ** MPLS Uplink {{ wan_network }} ** 
+ description to iosxrv-1
  duplex full
  nameif outside
  security-level 0
- ip address {{ wan_addess }}
+ ip address 10.0.0.13 255.255.255.252
 !
 interface GigabitEthernet0/1
- description to ** Internal MPI Network ** 
+ description to nx-osv-1
  duplex full
  nameif MPI
- security-level 100
- ip address {{ mpi_address }}
+ security-level 0
+ ip address 10.0.0.17 255.255.255.252
 !
 interface GigabitEthernet0/2
- description ** Internal MPE Network **
+ description to server-5
  duplex full
  nameif MPE
- security-level 90
- ip address {{ mpe_address }}
+ security-level 0
+ ip address 10.0.0.33 255.255.255.252
 !
 interface GigabitEthernet0/3
- description to ** Internal Users **
  shutdown
- nameif USERS
+ no nameif
  no security-level
- ip address {{ users_address }}
+ no ip address
 !
 interface Management0/0
- description to ** MGMT **
+ description OOB Management
  duplex full
  management-only
  nameif mgmt
@@ -58,7 +57,7 @@ interface Management0/0
 ftp mode passive
 same-security-traffic permit inter-interface
 object-group network INTERNAL_USERS
- network-object {{ users_network }}
+ network-object 10.10.51.0 255.255.255.0
 object-group network ENCLAVE_USER_SERVICES
  network-object 10.100.70.160 255.254.255.252
 object-group network INTERNET_SERVERS
@@ -76,9 +75,9 @@ object-group network ENCLAVE_ORDERING_SERVERS
  network-object 10.100.58.0 255.255.255.0
  network-object 10.100.60.0 255.255.255.0
 object-group network INTERNAL_MPE_SERVERS
- network-object {{ mpe_network }}
+ network-object 10.10.47.128 255.255.255.192
 object-group network INTERNAL_MPI_SERVERS
- ggnetwork-object {{ mpi_network }}
+ network-object 10.10.47.192 255.255.255.192
 object-group network MPE_SERVERS
  network-object 10.0.0.128 255.0.0.192
 object-group network MPI_SERVERS
@@ -102,12 +101,22 @@ object-group service SCW_12345_svc_AR1
  service-object udp destination eq domain
  service-object udp destination range 1000 10000
  service-object esp
+object-group network SCW_12345_dst_AR1
+ network-object host 10.1.1.1
+object-group service SCW_12345_svc_AR2
+ service-object icmp echo
+ service-object udp destination eq syslog
+ service-object tcp destination eq ldaps
+ service-object ah
+object-group network SCW_12345_src_AR2
+ network-object 10.10.10.200 255.255.255.254
+ network-object 10.0.0.1 255.0.0.255
+object-group network SCW_12345_dst_AR2
+ network-object host 10.1.1.1
 access-list outside-in remark ### outside-in ACL
 access-list outside-in extended permit icmp any any
 access-list outside-in extended permit object-group INTERNET_SERVICES object-group INTERNET_SERVERS object-group INTERNAL_MPE_SERVERS
 access-list outside-in extended permit object-group INTERNET_SERVICES object-group INTERNET_SERVERS object-group INTERNAL_MPI_SERVERS
-access-list outside-in extended permit udp host 10.101.70.14 object-group INTERNAL_USERS eq 139
-access-list outside-in extended permit tcp 10.101.72.10 255.255.255.254 object-group INTERNAL_USERS eq 445
 access-list outside-in extended permit object-group MPI_SERVICES object-group MPI_SERVERS object-group INTERNAL_MPI_SERVERS
 access-list outside-in extended permit object-group MPE_SERVICES object-group MPE_SERVERS object-group INTERNAL_MPE_SERVERS
 access-list MPE-in remark ### MPE-in ACL
@@ -117,12 +126,18 @@ access-list MPE-in extended permit object-group MPE_SERVICES object-group INTERN
 access-list MPE-in extended permit object-group MPE_SERVICES object-group INTERNAL_MPI_SERVERS object-group ENCLAVE_MAIL_SERVERS
 access-list MPI-in remark ### MPI-in ACL
 access-list MPI-in extended permit icmp any any
+access-list MPI-in extended permit ip any4 any4
 access-list MPI-in extended permit object-group MPI_SERVICES object-group INTERNAL_MPI_SERVERS object-group MPI_SERVERS
-access-list USER-in remark ### MPI-in ACL
-access-list USERS-in extended permit object-group MPI_SERVICES object-group INTERNAL_USERS object-group ENCLAVE_ORDERING_SERVERS
-access-list USERS-in extended permit object-group MPI_SERVICES object-group INTERNAL_USERS object-group MPE_SERVERS
-access-list USERS-in extended permit object-group USER_SERVICES object-group INTERNAL_USERS object-group INTERNET_SERVERS
-access-list USERS-in extended permit object-group USER_SERVICES object-group INTERNAL_USERS object-group ENCLAVE_USER_SERVICES
+access-list MPI-in extended permit object-group USER_SERVICES object-group INTERNAL_USERS object-group INTERNET_SERVERS
+access-list MPI-in extended permit object-group MPI_SERVICES object-group INTERNAL_USERS object-group ENCLAVE_ORDERING_SERVERS
+access-list MPI-in extended permit object-group USER_SERVICES object-group INTERNAL_USERS object-group ENCLAVE_USER_SERVICES
+access-list MPI-in extended permit object-group MPI_SERVICES object-group INTERNAL_USERS object-group MPE_SERVERS
+access-list TEST_ACL1 extended permit object-group SCW_12345_svc_AR1 any object-group SCW_12345_dst_AR1
+access-list TEST_ACL1 extended permit object-group SCW_12345_svc_AR2 object-group SCW_12345_src_AR2 object-group SCW_12345_dst_AR2
+access-list TEST_ACL2 extended permit object-group SCW_12345_svc_AR1 any object-group SCW_12345_dst_AR1
+access-list TEST_ACL2 extended permit object-group SCW_12345_svc_AR2 object-group SCW_12345_src_AR2 object-group SCW_12345_dst_AR2
+access-list TEST_ACL3 extended permit object-group SCW_12345_svc_AR1 any object-group SCW_12345_dst_AR1
+access-list TEST_ACL3 extended permit object-group SCW_12345_svc_AR2 object-group SCW_12345_src_AR2 object-group SCW_12345_dst_AR2
 pager lines 23
 logging enable
 logging timestamp
@@ -143,8 +158,15 @@ no arp permit-nonconnected
 access-group outside-in in interface outside
 access-group MPI-in in interface MPI
 access-group MPE-in in interface MPE
-access-group USERS-in in interface USERS
-route outside 0.0.0.0 0.0.0.0 {{ wan_peer }}  1
+route outside 0.0.0.0 0.0.0.0 10.0.0.14 1
+route MPI 10.0.0.24 255.255.255.252 10.0.0.18 1
+route MPI 10.0.0.28 255.255.255.252 10.0.0.18 1
+route MPE 10.10.47.128 255.255.255.192 10.0.0.34 1
+route MPI 10.10.47.192 255.255.255.192 10.0.0.18 1
+route MPI 10.10.51.0 255.255.255.0 10.0.0.18 1
+route mgmt 10.20.50.0 255.255.255.0 172.16.1.254 1
+route mgmt 10.20.51.0 255.255.255.0 172.16.1.254 1
+route MPI 192.168.0.4 255.255.255.255 10.0.0.18 1
 timeout xlate 3:00:00
 timeout pat-xlate 0:00:30
 timeout conn 1:00:00 half-closed 0:10:00 udp 0:02:00 sctp 0:02:00 icmp 0:00:02
