Pair session in afternoon

--- a/baseline_asa.conf
+++ b/baseline_asa.conf
@@ -24,7 +24,7 @@ interface GigabitEthernet0/0
  duplex full
  nameif outside
  security-level 0
- ip address {{ wan_addess }}
+ ip address {{ wan_address }}
 !
 interface GigabitEthernet0/1
  description to ** Internal MPI Network ** 
@@ -43,7 +43,7 @@ interface GigabitEthernet0/2
 interface GigabitEthernet0/3
  description to ** Internal Users **
  shutdown
- nameif USERS
+ nameif users
  no security-level
  ip address {{ users_address }}
 !
@@ -118,11 +118,11 @@ access-list MPE-in extended permit object-group MPE_SERVICES object-group INTERN
 access-list MPI-in remark ### MPI-in ACL
 access-list MPI-in extended permit icmp any any
 access-list MPI-in extended permit object-group MPI_SERVICES object-group INTERNAL_MPI_SERVERS object-group MPI_SERVERS
-access-list USER-in remark ### MPI-in ACL
-access-list USERS-in extended permit object-group MPI_SERVICES object-group INTERNAL_USERS object-group ENCLAVE_ORDERING_SERVERS
-access-list USERS-in extended permit object-group MPI_SERVICES object-group INTERNAL_USERS object-group MPE_SERVERS
-access-list USERS-in extended permit object-group USER_SERVICES object-group INTERNAL_USERS object-group INTERNET_SERVERS
-access-list USERS-in extended permit object-group USER_SERVICES object-group INTERNAL_USERS object-group ENCLAVE_USER_SERVICES
+access-list users-in remark ### MPI-in ACL
+access-list users-in extended permit object-group MPI_SERVICES object-group INTERNAL_USERS object-group ENCLAVE_ORDERING_SERVERS
+access-list users-in extended permit object-group MPI_SERVICES object-group INTERNAL_USERS object-group MPE_SERVERS
+access-list users-in extended permit object-group USER_SERVICES object-group INTERNAL_USERS object-group INTERNET_SERVERS
+access-list users-in extended permit object-group USER_SERVICES object-group INTERNAL_USERS object-group ENCLAVE_USER_SERVICES
 pager lines 23
 logging enable
 logging timestamp
@@ -143,7 +143,7 @@ no arp permit-nonconnected
 access-group outside-in in interface outside
 access-group MPI-in in interface MPI
 access-group MPE-in in interface MPE
-access-group USERS-in in interface USERS
+access-group USERS-in in interface users
 route outside 0.0.0.0 0.0.0.0 {{ wan_peer }}  1
 timeout xlate 3:00:00
 timeout pat-xlate 0:00:30
