--- a/baseline_asa.conf
+++ b/baseline_asa.conf
@@ -53,7 +53,7 @@ interface Management0/0
  management-only
  nameif mgmt
  security-level 100
- ip address 172.16.1.126 255.255.255.0
+ ip address {{ management_address }}
 !
 ftp mode passive
 same-security-traffic permit inter-interface
