Place management network in "shutdown" state

--- a/sample_asa.conf
+++ b/sample_asa.conf
@@ -47,6 +47,7 @@ interface GigabitEthernet0/3
  no ip address
 !
 interface Management0/0
+ shutdown
  description OOB Management
  duplex full
  management-only
