--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,32 @@
-psutil
+asn1crypto>=0.22.0
+bcrypt>=3.1.3
+certifi>=2017.4.17
+cffi>=1.10.0
+chardet>=3.0.4
+cryptography>=1.9
+dnspython>=1.15.0
+dnspython3>=1.15.0
+idna>=2.5
 ifaddr>=0.1.4
+ipaddress>=1.0.22
+Jinja2>=2.9.6
+Mako>=1.0.6
+MarkupSafe>=1.0
+netaddr>=0.7.19
+netifaces>=0.10.5
+packaging>=16.8
+paramiko>=2.2.1
+prompt-toolkit>=1.0.14
+psutil>=5.4.8
+py>=1.4.33
+pyasn1>=0.2.3
+pycparser>=2.17
+PyNaCl>=1.1.2
+pyparsing>=2.2.0
+pytest>=3.1.1
+requests>=2.17.3
+requests-toolbelt>=0.7.1
+six>=1.10.0
 toml>=0.10.0
+urllib3>=1.21.1
+wcwidth>=0.1.7
